Updating author list

--- a/README.rmd
+++ b/README.rmd
@@ -1,9 +1,6 @@
-
 ---
   output: github_document
 ---
-
-<!-- README.md is generated from README.Rmd. Please edit that file -->
 
 # causens
 
@@ -12,7 +9,7 @@
 
 ## Overview
 
-causens is an R package that will allow to truly infer on causal relationships.
+causens is an R package that will allow to perform various sensitivity analysis methods within the context of causal inference.
 
 ## Installation
 
@@ -37,7 +34,17 @@ library(causens)
 
 Please cite our software using:
 
-*insert bibtex citation*
+```
+@Manual{,
+  title = {causens: Perform causal sensitivity analyses using various statistical
+methods},
+  author = {Larry Dong, Kuan Liu},
+  year = {2023},
+  note = {R package version 0.0.1, 
+https://kuan-liu-lab.github.io/causens/},
+  url = {https://github.com/Kuan-Liu-Lab/causens/},
+}
+```
 
 ## Getting help
 
