Adding backbone of paper

--- a/paper.bib
+++ b/paper.bib
@@ -1,3 +1,14 @@
+@article{blackwell2014selection,
+  title={A selection bias approach to sensitivity analysis for causal effects},
+  author={Blackwell, Matthew},
+  journal={Political Analysis},
+  volume={22},
+  number={2},
+  pages={169--182},
+  year={2014},
+  publisher={Cambridge University Press}
+}
+
 @article{brumback2004sensitivity,
   title={Sensitivity analyses for unmeasured confounding assuming a marginal structural model for repeated measures},
   author={Brumback, Babette A and Hern{\'a}n, Miguel A and Haneuse, Sebastien JPA and Robins, James M},
@@ -7,6 +18,17 @@
   pages={749--767},
   year={2004},
   publisher={Wiley Online Library}
+}
+
+@article{frank2013would,
+  title={What would it take to change an inference? Using Rubin’s causal model to interpret the robustness of causal inferences},
+  author={Frank, Kenneth A and Maroulis, Spiro J and Duong, Minh Q and Kelcey, Benjamin M},
+  journal={Educational Evaluation and Policy Analysis},
+  volume={35},
+  number={4},
+  pages={437--460},
+  year={2013},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
 }
 
 @article{li2011propensity,
@@ -29,4 +51,25 @@
   pages={2887--2901},
   year={2017},
   publisher={Wiley Online Library}
+}
+
+@article{narvaiz2024konfound,
+  title={konfound: An R Sensitivity Analysis Package to Quantify the Robustness of Causal Inferences},
+  author={Narvaiz, Sarah and Lin, Qinyun and Rosenberg, Joshua M and Frank, Kenneth A and Maroulis, Spiro J and Wang, Wei and Xu, Ran},
+  journal={Journal of Open Source Software},
+  volume={9},
+  number={95},
+  pages={5779},
+  year={2024}
+}
+
+@article{rosenbaum2007sensitivity,
+  title={Sensitivity analysis for m-estimates, tests, and confidence intervals in matched observational studies},
+  author={Rosenbaum, Paul R},
+  journal={Biometrics},
+  volume={63},
+  number={2},
+  pages={456--464},
+  year={2007},
+  publisher={Oxford University Press}
 }
