--- a/vignettes/causens-vignette.Rmd
+++ b/vignettes/causens-vignette.Rmd
@@ -122,7 +122,7 @@ data <- simulate_data(
 )
 
 # Treatment model is incorrect since U is "missing"
-causens(Z ~ X.1 + X.2 + X.3, "Y", data = data, method = "Li", c1 = 0.25, c0 = 0.25)
+causens_sf(Z ~ X.1 + X.2 + X.3, "Y", data = data, c1 = 0.25, c0 = 0.25)
 ```
 
 ## Bayesian Methods
@@ -145,7 +145,7 @@ data <- simulate_data(
   y_type = "continuous"
 )
 
-causens(Z ~ X.1 + X.2 + X.3, "Y", data, method = "Bayesian")
+bayesian_causens(Z ~ X.1 + X.2 + X.3, Y ~ X.1 + X.2 + X.3, U ~ X.1 + X.2 + X.3, "Y", data)
 ```
 
 ## Monte Carlo Approach to Causal Sensitivity Analysis
