--- a/vignettes/causens-vignette.Rmd
+++ b/vignettes/causens-vignette.Rmd
@@ -122,7 +122,7 @@ data <- simulate_data(
 )
 
 # Treatment model is incorrect since U is "missing"
-causens_sf(Z ~ X.1 + X.2 + X.3, "Y", data = data, c1 = 0.25, c0 = 0.25)
+causens_sf(Z ~ X.1 + X.2 + X.3, "Y", data = data, c1 = 0.25, c0 = 0.25)$estimated_ate
 ```
 
 ## Bayesian Methods
@@ -145,8 +145,8 @@ data <- simulate_data(
   y_type = "continuous"
 )
 
-bayesian_causens(Z ~ X.1 + X.2 + X.3, Y ~ X.1 + X.2 + X.3, 
-                 U ~ X.1 + X.2 + X.3, "Y", data)
+bayesian_causens(Z ~ X.1 + X.2 + X.3, Y ~ X.1 + X.2 + X.3,
+                 U ~ X.1 + X.2 + X.3, data)
 ```
 
 ## Monte Carlo Approach to Causal Sensitivity Analysis
@@ -175,5 +175,5 @@ data <- simulate_data(
   informative_u = FALSE
 )
 
-causens_monte_carlo("Y", "Z", c("X.1", "X.2", "X.3"), data)
+causens_monte_carlo("Y", "Z", c("X.1", "X.2", "X.3"), data)$estimated_ate
 ```
