--- a/joss/paper.bib
+++ b/joss/paper.bib
@@ -53,6 +53,17 @@
   publisher={Wiley Online Library}
 }
 
+@article{mccandless2019bayesian,
+  title={Bayesian sensitivity analysis for unmeasured confounding in causal mediation analysis},
+  author={McCandless, Lawrence C and Somers, Julian M},
+  journal={Statistical Methods in Medical Research},
+  volume={28},
+  number={2},
+  pages={515--531},
+  year={2019},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
 @article{narvaiz2024konfound,
   title={konfound: An R Sensitivity Analysis Package to Quantify the Robustness of Causal Inferences},
   author={Narvaiz, Sarah and Lin, Qinyun and Rosenberg, Joshua M and Frank, Kenneth A and Maroulis, Spiro J and Wang, Wei and Xu, Ran},
